Fix alignment and update styles in potfolio.css
Correct alignment properties and update styles for various elements.

--- a/potfolio.css
+++ b/potfolio.css
@@ -5,6 +5,15 @@ body{
   background-color:#f4f4f4;
 }
 
+.page-title{
+    allign-text:center;
+    justify-items:center;
+}
+.order{
+    allign-text:center;
+    justify-items:center;
+}
+    
 
 /* Global */
 .container{
@@ -20,12 +29,12 @@ ul{
 }
 
 .button_1{
-  height:38px;bo
+  height:38px;
   background:#e8491d;
   border:0;
   padding-left: 20px;
   padding-right:20px;
-  color:#ffffff;
+  color:black;
 }
 
 .dark{
@@ -84,7 +93,7 @@ header a:hover{
 /* Showcase */
 #showcase{
   min-height:400px;
-  background:url('image/img.jpg') no-repeat;
+  background:url('image/img2.jpg') no-repeat;
   background-position: center;
   background-size: cover;
   text-align:center;
@@ -153,17 +162,19 @@ aside#sidebar .quote input, aside#sidebar .quote textarea{
 
 /* Main-col */
 article#main-col{
-  float:left;
-  width:65%;
+  float:center;
+  width:100%;
 }
 
 /* Services */
 ul#services li{
   list-style: none;
-  padding:20px;
+  padding:0px;
   border: #cccccc solid 1px;
   margin-bottom:5px;
   background:#e6e6e6;
+  justify-items:center;
+  allign-items:center;
 }
 
 footer{
